--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Welcome to My Website!!</p>
             </div>
             <img
-                src="./imagesWebsite/oval.svg"
+                src="./oval.svg"
                 alt="Nithin Sai Krishna"
                 class="picture"
             />
